// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for "linux": local 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.linux
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.text"
      id="onboarding.analysis.build_wrapper.text"
      values={
        {
          "env_var": <code>
            PATH
          </code>,
        }
      }
    />
  </p>
  <p>
    <a
      className="button"
      download="build-wrapper-linux-x86.zip"
      href="/static/cpp/build-wrapper-linux-x86.zip"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`should render correctly for "linux": remote 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.linux
  </h4>
  <CodeSnippet
    snippet="curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip http://example.com/static/cpp/build-wrapper-linux-x86.zip
unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-linux-x86:$PATH
"
  />
</div>
`;

exports[`should render correctly for "mac": local 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.mac
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.text"
      id="onboarding.analysis.build_wrapper.text"
      values={
        {
          "env_var": <code>
            PATH
          </code>,
        }
      }
    />
  </p>
  <p>
    <a
      className="button"
      download="build-wrapper-macosx-x86.zip"
      href="/static/cpp/build-wrapper-macosx-x86.zip"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`should render correctly for "mac": remote 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.mac
  </h4>
  <CodeSnippet
    snippet="curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-macosx-x86.zip http://example.com/static/cpp/build-wrapper-macosx-x86.zip
unzip -o $HOME/.sonar/build-wrapper-macosx-x86.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-macosx-x86:$PATH
"
  />
</div>
`;

exports[`should render correctly for "win": local 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.win
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.text"
      id="onboarding.analysis.build_wrapper.text"
      values={
        {
          "env_var": <code>
            %PATH%
          </code>,
        }
      }
    />
  </p>
  <p>
    <a
      className="button"
      download="build-wrapper-win-x86.zip"
      href="/static/cpp/build-wrapper-win-x86.zip"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`should render correctly for "win": remote 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.win
  </h4>
  <CodeSnippet
    snippet="$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
rm "$env:SONAR_DIRECTORY/build-wrapper-win-x86" -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_DIRECTORY/build-wrapper-win-x86 -type directory
(New-Object System.Net.WebClient).DownloadFile("http://example.com/static/cpp/build-wrapper-win-x86.zip", "$env:SONAR_DIRECTORY/build-wrapper-win-x86.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/build-wrapper-win-x86.zip", "$env:SONAR_DIRECTORY")
$env:Path += ";$env:SONAR_DIRECTORY/build-wrapper-win-x86"
"
  />
</div>
`;
